--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
     "formik": "^2.1.4",
     "history": "^4.10.1",
     "prop-types": "^15.7.2",
@@ -14,7 +15,8 @@
     "react-google-login": "^5.1.19",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "semantic-ui-react": "^0.88.2"
+    "semantic-ui-react": "^0.88.2",
+    "typescript": "^3.9.2"
   },
   "scripts": {
     "start": "react-scripts start",
