--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-google-login": "^5.1.19",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "semantic-ui-react": "^0.88.2"
+    "semantic-ui-react": "^0.88.2",
+    "typescript": "^3.9.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,5 +38,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://1ab8b5a8.ngrok.io"
+  "proxy": "http://1429d6dc.ngrok.io"
 }
