--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-google-login": "^5.1.19",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "semantic-ui-react": "^0.88.2",
     "typescript": "^3.9.2"
   },
